2003-11-04	fabian
    
    * Checking in the new icon
    * Checking in German localization
    * Updated webpage and help files for new release
    
2003-10-15	fabian

    * Put in Ujwal's fix of crash when enforce aligment unchecked
    
2003-10-10	fabian

    * Corrected the encoding for the French version of iTerm.strings.
    
2003-10-09	ujwal

    * Reverted to individual timer threads for each session. Other code 
      is not fully tested yet.

2003-10-09	fabian

    * Updated all localizations for Script menu.
    
2003-10-07	ujwal

    * Fixed bug in VT100Screen: clearBuffer.

2003-10-05	ujwal

    * Put in a Scripts menu in the main menu to run user defined scripts.
      The scripts need to be stored in in the ~/Library/Application Support/iTerm/Scripts 
      directory.
    * Fixed compiler warnings about weak link by removing unused link against 
      CoreFoundation framework.

2003-10-03	fabian

    * Put in a link to nightly CVS tarball and CVS build in webpages
    
2003-10-03	ujwal

    * Put in exception handlers in VT100Screen wherever screen lock is 
      aquired. This makes sure that the screen lock is released when 
      an exception is raised.

2003-10-02	ujwal

    * Added some more scripting support to get and set the current 
      terminal.

2003-10-01	ujwal

    * Default font is now chosen with [NSFont userFixedPitchFontOfSize:0].

2003-09-30	ujwal

    * All periodic timer code for each open session is called by a single 
      timer from PsedoTerminal. Thus there is one thread per window. 
      This should reduce the number of timer threads running and hence 
      lessen the load on the CPU.

2003-09-29	fabian

    * Fixed a bug in ANSICSI_ECH code. It shouldn't move cursor position.
    
2003-09-27	fabian

    * Added a section of Interesting Links in resources section of website.
    
2003-09-27	ujwal

    * Disabling log start/stop menus depending on current logging status.

2003-09-26	fabian
